--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,4 +29,7 @@
 	{% if site.google_analytics and jekyll.environment == 'production' %}
 	{% include analytics.html %}
 	{% endif %}
+
+	<!-- SEO Tag -->
+	{% seo %}
 </head>
