--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -1,5 +1,7 @@
 @import 'libs/grids';
+@import 'libs/containers';
 @import 'libs/images';
+@import 'libs/videos';
 @import 'libs/collapsible';
 
 html {
@@ -27,35 +29,6 @@ hr{
     width:100%;
     overflow:hidden;
     border: 0rem solid palette(accent5);
-}
-
-.youtube-container {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 */
-	height: 0;
-
-    background-color: palette(video-box);
-    border: 0.3rem solid palette(video-box);
-    border-radius: 0.3rem;
-
-    margin: 0.5rem 0;
-}
-.youtube-container iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-    border-radius: 0.3rem;
-}
-
-.youtube-container video {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-    border-radius: 0.3rem;
 }
 
 .title-box{
@@ -122,6 +95,8 @@ li ol > li:before {
     background-color: palette(text);
     transition: ease-in-out 0.3s;
 
+    // text-decoration: none;
+
     margin: 0.5rem;
 }
 
@@ -185,9 +160,20 @@ li ol > li:before {
 
 .container__preview-video{
     position: relative;
-    display: flex;
     width: 100%;
-    height: 100%;
+
+    // 1:1 aspect ratio
+    height: 0;
+    padding-top: 100%;
+}
+
+.container__preview-video video{
+    position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+    // border-radius: 0.3rem;
 }
 
 .list-container{
