--- a/_includes/core.html
+++ b/_includes/core.html
@@ -16,7 +16,7 @@
                 content.style.borderWidth = "0em";
                 content.style.visibility = "hidden";
             } else {
-                content.style.maxHeight = content.scrollHeight + "px";
+                content.style.maxHeight = "fit-content";// content.scrollHeight + "px";
                 content.style.borderWidth = "0.3rem";
                 content.style.visibility = "visible";
             } 
