--- a/_sass/libs/_collapsible.scss
+++ b/_sass/libs/_collapsible.scss
@@ -28,8 +28,8 @@
     content: "\2212";
 }
 
-.collapsible__content {
-    // display:grid;
+.collapsible__content{
+    display:grid;
     // width:100%;
     max-height: 0;
     overflow: hidden;
@@ -50,19 +50,4 @@
 .collapsible__content.code{
     border-color: palette(accent5);
     background-color: palette(accent5);
-}
-
-
-.collapsible__test{
-    visibility: hidden;
-    max-height: 0;
-
-    border: 0rem solid palette(accent5);
-    overflow: hidden;
-
-    // padding: 0;
-    // outline: none;
-
-
-    margin-bottom: 1rem;
 }
