--- a/_sass/libs/_grids.scss
+++ b/_sass/libs/_grids.scss
@@ -4,6 +4,7 @@
     width: 100%;
     gap: 1rem;
     grid-template-columns: repeat(2, 1fr);// 1fr;
+    margin: 1rem 0;
 }
 
 .grid__columns--exactly2{
