--- a/_includes/core.html
+++ b/_includes/core.html
@@ -2,6 +2,13 @@
 <script src="/assets/js/prism.js"></script>
 <script src="/assets/js/reveal.js"></script>
 
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+     "HTML-CSS": { linebreaks: { automatic: true } },
+             SVG: { linebreaks: { automatic: true } }
+    });
+</script>
+
 <!-- Collapsible -->
 <script>
     var coll = document.getElementsByClassName("collapsible");
