--- a/_includes/core.html
+++ b/_includes/core.html
@@ -10,6 +10,8 @@
     });
 </script>
 
+
+<!-- Tooltip code from https://osvaldas.info/elegant-css-and-jquery-tooltip-responsive-mobile-friendly -->
 <script>
     $( function()
     {
