--- a/_sass/libs/_text.scss
+++ b/_sass/libs/_text.scss
@@ -4,7 +4,7 @@
     font-weight: normal;
     text-decoration: underline;
     text-decoration-style: dashed;
-    text-decoration-thickness: 0.01em;
+    text-decoration-thickness: 0.05rem;
 }
 
 .style1 a:hover{
@@ -26,7 +26,7 @@
     color: inherit;
     text-decoration: underline;
     text-decoration-style: dotted;
-    text-decoration-thickness: 0.01em;
+    text-decoration-thickness: 0.05rem;
 }
 
 // .style1 .tooltip .tooltip__text{
