--- a/_includes/core.html
+++ b/_includes/core.html
@@ -5,10 +5,14 @@
 <!-- MathJax line breaks -->
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
-     "HTML-CSS": { linebreaks: { automatic: true } },
-             SVG: { linebreaks: { automatic: true } }
+      "SVG": {linebreaks: { automatic: true }}
     });
-</script>
+  window.addEventListener('resize', MJrerender);
+  function MJrerender(){
+  MathJax.Hub.Queue(["Rerender",MathJax.Hub])
+  };
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_SVG-full"></script>
 
 
 <!-- Tooltip code from https://osvaldas.info/elegant-css-and-jquery-tooltip-responsive-mobile-friendly -->
