--- a/_includes/preview-list-simple.html
+++ b/_includes/preview-list-simple.html
@@ -78,7 +78,7 @@
         
 
         var captionContainer = document.createElement('div');
-        captionContainer.classList.add('caption__text', 'round');
+        captionContainer.classList.add('caption__text--overlay', 'round');
         // captionContainer.classList.add('caption__text', 'round', 'caption__text--hover');
 
         var captionLink = document.createElement('a');
