--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -186,14 +186,14 @@ li ol > li:before {
     border-radius: 0.3rem;
 }
 
-a{
-    font-weight: bold;
-    text-decoration: none;
-    color:inherit;
-}
-a:hover{
-    text-decoration: underline;
-}
+// a{
+//     font-weight: bold;
+//     text-decoration: none;
+//     color:inherit;
+// }
+// a:hover{
+//     text-decoration: underline;
+// }
 
 #toTopBtn {
     visibility: hidden;
