--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,8 +22,8 @@
 	<!-- Code highlighting -->
 	<link rel="stylesheet" href="/assets/css/prism.css">
 
-	<!-- MathJax latex like writing -->
-	<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+	<!-- MathJax latex like writing, needs to be loaded in core.html after line-break script -->
+	<!-- <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> -->
 
 	<!-- Google analytics -->
 	{% if site.google_analytics and jekyll.environment == 'production' %}
