--- a/_includes/preview-list.html
+++ b/_includes/preview-list.html
@@ -79,7 +79,7 @@
         
 
         var captionContainer = document.createElement('div');
-        captionContainer.classList.add('caption__text', 'caption__text--fill', 'round');
+        captionContainer.classList.add('caption__text--overlay', 'caption__text--fill', 'round');
 
         var captionLink = document.createElement('a');
         captionLink.href = post.url;
