--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -19,6 +19,7 @@
         text-decoration: none;
         text-align: center;
         font-size: large;
+        font-weight: bold;
         display: inline-block;
 
         padding: 0.3em;
