--- a/_sass/libs/_grids.scss
+++ b/_sass/libs/_grids.scss
@@ -15,6 +15,14 @@
     grid-template-columns: repeat(2, 1fr);
 }
 
+.grid__columns--exactly3{
+    position: relative;
+    display: grid;
+    width: 100%;
+    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+}
+
 .grid__align--bottom{
     align-items: bottom;
 }
