--- a/_sass/libs/_text.scss
+++ b/_sass/libs/_text.scss
@@ -1,6 +1,6 @@
 a{
     color: inherit;
-    font-weight: normal;
+    // font-weight: normal;
     text-decoration: underline;
     text-decoration-style:solid;
     text-decoration-thickness: 0.05em;
