First attempt at comment section using utterances plugin.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,6 +55,7 @@
           </div>
         {% endif %}
 
+        {% include comments.html %}
         
       </div>
       <div class="whitespace"></div>
@@ -64,7 +65,6 @@
     
 
     <button onclick="topFunction()" id="toTopBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
-
     
     {% include footer.html %}
     {% include core.html %}
