--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -14,7 +14,7 @@ body {
 }
 
 .main-content{
-    padding: 1em;
+    padding: 1rem;
     background-color: palette(bg-alt);
     border-left: 0.2rem solid palette(divider);
     border-right: 0.2rem solid palette(divider);
