--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,29 +3,7 @@
 
     <div class="main-grid">
         <div></div>
-        <div class="socials__container">
-            <!-- <a href="mailto:kelvinvanhoorn@outlook.com" class="socials__a">
-                <i class="fas fa-envelope-square" id="footer__socials"></i>
-            </a>
-            <a href="https://twitter.com/KelvinvanHoorn" target="_blank" class="socials__a">
-                <i class="fab fa-twitter-square" id="footer__socials"></i>
-            </a>
-            <a href="https://www.reddit.com/user/Radagasd" target="_blank" class="socials__a">
-                <i class="fab fa-reddit-square" id="footer__socials"></i>
-            </a>
-            <a href="https://www.github.com/Radagasd" target="_blank" class="socials__a">
-                <i class="fab fa-github-square" id="footer__socials"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/kelvin-van-hoorn" target="_blank" class="socials__a">
-                <i class="fab fa-linkedin" id="footer__socials"></i>
-            </a>
-            <a href="https://radagasd.itch.io/" target="_blank" class="socials__a">
-                <i class="fab fa-itch-io" id="footer__socials"></i>
-            </a>
-            <a href="/feed.xml" target="_blank" class="socials__a">
-                <i class="fas fa-rss-square" id="footer__socials"></i>
-            </a> -->
-
+        <div style="margin:0 1rem;">
             <div class="social__container--extending">
                 <a href="mailto:kelvinvanhoorn@outlook.com">
                     <i class="fas fa-envelope" style="vertical-align:text-bottom;"></i><span>&nbspkelvinvanhoorn@outlook.com</span>
