--- a/_sass/libs/_containers.scss
+++ b/_sass/libs/_containers.scss
@@ -9,8 +9,6 @@
     margin-bottom: 0.5rem;
 }
 
-
-
 @media only screen and (max-width: $mediumdevice-width){
     .container.responsive h1{
         font-size: 4.5vw;
@@ -25,13 +23,8 @@
 
 .caption__text{
     position: relative;
-    // display: flex;
     background: palette(bg-contrast);
 
-    // position: absolute;
-    // bottom: 0;
-    // background: rgb(0,0,0);
-    // background: rgba(0,0,0,0.5);
     color: palette(text-alt);
     width: 100%;
     text-align: center;
@@ -71,6 +64,10 @@
     height: 100%;
 }
 
-.caption__p--fill{
-    height:100%;
+.container__list{
+    position: relative;
+    border: 0.3rem solid palette(accent4);
+    background-color: palette(accent4);
+    color: palette(text-alt);
+    padding: 0.5rem;
 }
