--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -12,8 +12,6 @@ $palette: (
     text            : hsl(0, 0%, 10%),
     text-alt        : hsl(0, 0%, 100%),
 
-    video-box       : tomato,
-
     accent1         : #4abf50,
     accent2         : #ee5622,
     accent3         : #eca72c,
@@ -21,5 +19,5 @@ $palette: (
     accent5         : #914d76
 );
 
-$phone-width: 600px;
+// $phone-width: 600px;
 $mediumdevice-width: 768px;
