Added a dark theme, added shadows to the background, changed from $palette to :root system for color palette.

--- a/_includes/core.html
+++ b/_includes/core.html
@@ -2,6 +2,9 @@
 <script src="/assets/js/prism.js"></script>
 <script src="/assets/js/reveal.js"></script>
 
+<!-- Theme selection -->
+<script src="/assets/js/themeSelect.js"></script>
+
 <!-- MathJax line breaks -->
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
