--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     <div class="main-grid">
 
-      <div class="whitespace"></div>
+      <div class="main-whitespace shadow-left"></div>
       <div class="main-content">
 
         <div class="title-box">
@@ -22,7 +22,7 @@
         
         {{ content }}
       </div>
-      <div class="whitespace"></div>
+      <div class="main-whitespace shadow-right"></div>
 
     </div>
 
