--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@
     <div class="main-grid">
       
 
-      <div class="whitespace"></div>
+      <div class="main-whitespace shadow-left"></div>
       <div class="main-content">
 
         <div class="title-box">
@@ -58,7 +58,7 @@
         {% include comments.html %}
         
       </div>
-      <div class="whitespace"></div>
+      <div class="main-whitespace shadow-right"></div>
       
 
     </div>
