--- a/_sass/external/reveal.scss
+++ b/_sass/external/reveal.scss
@@ -59,7 +59,7 @@
 	top: 0;
 	width: 5px;
 	height: 100%;
-	background: palette(bg-contrast);
+	background: var(--bg-caption);
 	-webkit-transform: translate3d(-50%, 0, 0);
 	transform: translate3d(-50%, 0, 0);
 	opacity: 0.7;
@@ -73,9 +73,9 @@
 	width: 3rem;//50px;
 	height: 30px;
 	border-radius: 0.3rem;
-	background: palette(bg-contrast);
+	background: var(--bg-caption);
 	left: calc(2px - 1.5rem);//-23px;
-	border: 1px solid palette(accent3);
+	border: 1px solid var(--accent3);
 	-webkit-transform: translateY(-15px);
 	transform: translateY(-15px);
 }
@@ -84,6 +84,6 @@
 	position: relative;
 	top: 1px;
 	font-size: 22px;
-	color: palette(accent3);
+	color: var(--accent3);
 	text-align: center;
 }
