--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -1,5 +1,4 @@
 #footer{
     text-align: left;
-    border-top: 0.2rem solid palette(divider);
-    background-color: palette(bg);
+    background-color: var(--bg-header);
 }
