--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -1,6 +1,5 @@
 #header{
-    background: palette(bg);
-    border-bottom: 0.2rem solid palette(divider);
+    background: var(--bg-header);
 
     .navbar{
         position: relative;
@@ -14,7 +13,7 @@
     }
 
     .navbar a{
-        color: palette(text);
+        color: var(--text);
         
         text-decoration: none;
         text-align: center;
@@ -25,16 +24,16 @@
         padding: 0.3em;
         margin: 0.2em;
 
-        background-color: palette(bg);
-        border: 0.2em solid palette(accent1);
+        background-color: var(--bg-header);
+        border: 0.2em solid var(--accent1);
         border-radius: 0.5em;
 
         transition: all 0.3s ease-in-out;
     }     
 
     .navbar a:hover{
-        background-color: palette(accent1);
-        color: palette(text-alt);
+        background-color: var(--accent1);
+        color: var(--text-contrast);
     }
 
     .navbar .logo
