--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -3,17 +3,34 @@
 }
 
 body {
-    background-color: palette(bg);
+    background-color: var(--bg-header);
     margin: 0;
     font-size: large;
+    // font-family:sans-serif;
+    color: var(--text);
+    font-family: Georgia;
 }
 
 .main-content{
     padding: 1rem;
-    background-color: palette(bg-alt);
-    border-left: 0.2rem solid palette(divider);
-    border-right: 0.2rem solid palette(divider);
+    background-color: var(--bg-main);
+    box-shadow: 0 0 0.5rem var(--shadow-main) inset;
 }
+
+.main-whitespace{
+    background-color: var(--bg-variation);
+    height: 100%;
+}
+
+.main-whitespace.shadow-left{
+    box-shadow: -0.5rem 0.5rem 0.5rem var(--shadow-sides) inset, 0rem -0.5rem 0.5rem var(--shadow-sides) inset;
+}
+
+.main-whitespace.shadow-right{
+    box-shadow: 0.5rem 0.5rem 0.5rem var(--shadow-sides) inset, 0rem -0.5rem 0.5rem var(--shadow-sides) inset;
+}
+
+
 
 .main-grid{
     display: grid;
