--- a/_sass/libs/_videos.scss
+++ b/_sass/libs/_videos.scss
@@ -7,18 +7,18 @@
     width: 100%;
     // height:100%;
 
-    background-color: palette(accent2);
-    border: 0.3rem solid palette(accent2);
+    background-color: var(--accent2);
+    border: 0.3rem solid var(--accent2);
 }
 
 .video__container.gif{
-    background-color: palette(accent2);
-    border: 0.3rem solid palette(accent2);
+    background-color: var(--accent2);
+    border: 0.3rem solid var(--accent2);
 }
 
 .video__container.preview{
-    background-color: palette(accent1);
-    border: 0.3rem solid palette(accent1);
+    background-color: var(--accent1);
+    border: 0.3rem solid var(--accent1);
 }
 
 .video__container.youtube{
@@ -26,8 +26,8 @@
 	padding-bottom: 56.25%; /* 16:9 */
 	height: 0;
 
-    background-color: palette(accent2);
-    border: 0.3rem solid palette(accent2);
+    background-color: var(--accent2);
+    border: 0.3rem solid var(--accent2);
 }
 
 .video__container video{
