Fixed 2 video links, made shadows less pronounced and changed font to Helvetica, sans-serif.

--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -6,9 +6,8 @@ body {
     background-color: var(--bg-header);
     margin: 0;
     font-size: large;
-    // font-family:sans-serif;
     color: var(--text);
-    font-family: Georgia;
+    font-family: Helvetica, sans-serif;
 }
 
 .main-content{
