--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -6,8 +6,8 @@
     --bg-contrast           : hsl(0, 0%, 20%);
     --bg-caption            : hsl(0, 0%, 20%);
 
-    --shadow-main           : hsl(0, 0%, 75%);
-    --shadow-sides          : hsl(0, 0%, 66%);
+    --shadow-main           : rgba(0, 0, 0, 5%);
+    --shadow-sides          : rgba(0, 0, 0, 10%);
 
     --text                  : hsl(0, 0%, 10%);
     --text-contrast         : hsl(0, 0%, 100%);
@@ -29,8 +29,8 @@
     --bg-contrast           : hsl(0, 0%, 80%);
     --bg-caption            : hsl(0, 0%, 20%);
 
-    --shadow-main           : hsl(0, 0%, 15%);
-    --shadow-sides          : hsl(0, 0%, 10%);
+    --shadow-main           : rgba(0, 0, 0, 5%);
+    --shadow-sides          : rgba(0, 0, 0, 10%);
 
     --text                  : hsl(0, 0%, 100%);
     --text-contrast         : hsl(0, 0%, 10%);
