Decreased font size.

--- a/_includes/core.html
+++ b/_includes/core.html
@@ -1,5 +1,7 @@
 <!-- Code highlighting -->
 <script src="/assets/js/prism.js"></script>
+
+<!-- Image comparison Slider -->
 <script src="/assets/js/reveal.js"></script>
 
 <!-- Theme selection -->
