--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -5,7 +5,7 @@
 body {
     background-color: var(--bg-header);
     margin: 0;
-    font-size: large;
+    // font-size: large;
     color: var(--text);
     font-family: Helvetica, sans-serif;
 }
