Astronomical Skybox post.  Lineheight change. Testing emoji icons in headers. Changed opening sentence a bit.

--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -6,6 +6,7 @@ body {
     background-color: var(--bg-header);
     margin: 0;
     // font-size: large;
+    line-height: 1.5em;
     color: var(--text);
     font-family: Helvetica, sans-serif;
 }
