--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -11,6 +11,14 @@ body {
     font-family: Helvetica, sans-serif;
 }
 
+h1 {
+    line-height: 1.2em;
+}
+
+h2 {
+    line-height: 1.2em;
+}
+
 .main-content{
     padding: 1rem;
     background-color: var(--bg-main);
