--- a/_sass/libs/_text.scss
+++ b/_sass/libs/_text.scss
@@ -11,6 +11,14 @@ a:hover{
     text-decoration-style: dashed;
 }
 
+// Code names, like function or variable names
+cn{
+    // color: inherit;
+    color: var(--accent5);
+    font-size: 0.8em;
+    font-weight: bold;
+}
+
 // Tooltips
 .tooltip{
     position: relative;
